# mishanya-bot-project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .project  CPPLINT.cfg  Makefile  README.md  Razmer.md  pyproject.toml  requirements.txt
docs/: Gerber_2.rar  arm_arch.drawio  firmware_arm_arch.drawio  nonlinear_servo.md  schemes.drawio  table_driver.md
driver_board/: PCB1_lack.PcbDoc  PCB1_no_lack.PcbDoc  PCB_Project_1.OutJob  PCB_Project_1.PrjPcb  PcbLib1.PcbLib  Schlib1.SchLib  Sheet1.SchDoc  description_board.md
equipment/: equipment.md
firmware/: .cproject  .gitignore  .project  Makefile  README.md  load.bat  load.sh  openocd_server.bat  pin_usage.md  project.mk
firmware_767/: .cproject  .gitignore  .project  CppProperties.json  Makefile  README.md  load.bat  load.sh  openocd_server.bat  pin_usage.md  project.mk  st_nucleo_f7.svd
mishanya_description/: CMakeLists.txt  README.md  package.xml
mishanya_description/launch/: gazebo controller.launch  gazebo description.launch  mishanya.launch  mishanya_description.launch  parameter.launch  twist_key.launch
mishanya_description/msg/: Movement.msg
mishanya_description/protos/: Mishanya.proto
mishanya_description/src/: kinematics.cpp  main.cpp  mishanya_plugin.cpp  odometry.cpp
mishanya_description/src/sensor/: encoder.cpp
mishanya_description/srv/: KinematicsForward.srv  KinematicsInverse.srv
mishanya_description/urdf/: base.xacro  kernel.xacro  mishanya.urdf  mishanya.xacro  omni.xacro  omni_wheel.xacro  rim.xacro  roller.xacro  wheel.xacro
mishanya_description/worlds/: base_map.wbt  mishanya.world
(+539 files in other folders)
