<?xml version="1.0"?>
<package format="2">
  <name>mishanya_description</name>
  <version>0.0.0</version>
  <description>The mishanya_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="softillusion.robotics@gmail.com">soft-illusion</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>webots-ros</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
